--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hangman</title>
-    <script type="module" crossorigin src="hangman/assets/index.ff38a73b.js"></script>
-    <link rel="stylesheet" href="hangman/assets/index.e4cf459d.css">
+    <script type="module" crossorigin src="/assets/index.ff38a73b.js"></script>
+    <link rel="stylesheet" href="/assets/index.e4cf459d.css">
   </head>
   <body>
     <div id="app"></div>
